--- a/Petroliq/appsettings.json
+++ b/Petroliq/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "PetroliqDatabase": {
+    "DatabaseName": "Petroliq",
+    "UserSettingsCollectionName": "UserSettings",
+    "UsersCollectionName": "Users"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
