Configure Auth0, implement AuthController and JWT Authorize on controller actions.
Create README.md.

--- a/Petroliq/appsettings.json
+++ b/Petroliq/appsettings.json
@@ -4,6 +4,11 @@
     "UserSettingsCollectionName": "UserSettings",
     "UsersCollectionName": "Users"
   },
+  "Auth0": {
+    "Domain": "https://petroliqapi.au.auth0.com/",
+    "Audience": "https://petroliq.dreamsof.dev/api",
+    "ClientUrl": "https://petroliqapi.au.auth0.com/oauth/token"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
