Add PetroliqConsole app for testing and validation.
Add ConsumptionCalculator, Delegates and move Enums.

UserSettingsController:
- refactor GetSettingsForUser and Update methods to be able to manipulate an object by user or user settings id.
- update UserController to match.

UserSettingsService:
- update GetForUserAsync method to work with either user or user settings ids.

App settings:
- add new Petroliq section with defaults.

Update readme.

--- a/Petroliq/appsettings.json
+++ b/Petroliq/appsettings.json
@@ -15,5 +15,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Petroliq": {
+    "KM_MI_FACTOR": 1.60934,
+    "MI_KM_FACTOR": 0.62,
+    "LTR_GAL_FACTOR": 4.54609,
+    "DEFAULT_ROUND_TO": 2
+  },
   "AllowedHosts": "*"
 }
