--- a/Petroliq/appsettings.json
+++ b/Petroliq/appsettings.json
@@ -1,13 +1,14 @@
 {
   "PetroliqDatabase": {
+    "ConnectionString": "REPLACE_ME_REFER_README",
     "DatabaseName": "Petroliq",
     "UserSettingsCollectionName": "UserSettings",
     "UsersCollectionName": "Users"
   },
-  "Auth0": {
-    "Domain": "https://petroliqapi.au.auth0.com/",
+  "Auth": {
     "Audience": "https://petroliq.dreamsof.dev/api",
-    "ClientUrl": "https://petroliqapi.au.auth0.com/oauth/token"
+    "Key": "REPLACE_ME_REFER_README",
+    "Issuer": "https://petroliq.dreamsof.dev"
   },
   "Logging": {
     "LogLevel": {
