--- a/PetroliqConsole/PetroliqConsole.csproj
+++ b/PetroliqConsole/PetroliqConsole.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Petroliq\Petroliq_API.csproj" />
   </ItemGroup>
 
