--- a/React/package.json
+++ b/React/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.19",
     "@types/react": "^18.2.45",
+    "axios": "^1.6.5",
     "moment": "^2.29.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.24.0",
