--- a/React/package.json
+++ b/React/package.json
@@ -6,7 +6,9 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.4",
+    "@mui/lab": "^5.0.0-alpha.160",
     "@mui/material": "^5.15.4",
     "@mui/x-data-grid": "^6.18.7",
     "@testing-library/jest-dom": "^5.16.1",
@@ -16,14 +18,18 @@
     "@types/node": "^16.11.19",
     "@types/react": "^18.2.45",
     "axios": "^1.6.5",
+    "dotenv": "^16.3.1",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.29.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "zod": "^3.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
