--- a/React/package.json
+++ b/React/package.json
@@ -11,13 +11,14 @@
     "@mui/lab": "^5.0.0-alpha.160",
     "@mui/material": "^5.15.4",
     "@mui/x-data-grid": "^6.18.7",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "@types/node": "^16.11.19",
     "@types/react": "^18.2.45",
     "axios": "^1.6.5",
+    "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.29.1",
@@ -27,6 +28,7 @@
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3",
     "zod": "^3.22.4"
@@ -56,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-datepicker": "^4.19.4",
     "@types/react-dom": "^18.2.18"
   }
