Update Nuget package versions: - Swashbuckle.AspNetCore - Microsoft.AspNetCore.Authentication.JwtBearer - System.IdentityModel.Tokens.Jwt
Update appsettings:
- add TokenValidityMinutes and RefreshTokenValiditityDays.

--- a/Petroliq/appsettings.json
+++ b/Petroliq/appsettings.json
@@ -8,7 +8,9 @@
   "Auth": {
     "Audience": "https://petroliq.dreamsof.dev/api",
     "Key": "REPLACE_ME_REFER_README",
-    "Issuer": "https://petroliq.dreamsof.dev"
+    "Issuer": "https://petroliq.dreamsof.dev",
+    "TokenValidityMinutes": 1,
+    "RefreshTokenValiditityDays":  7
   },
   "Logging": {
     "LogLevel": {
