--- a/React/package.json
+++ b/React/package.json
@@ -27,7 +27,6 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
     "stream-browserify": "^3.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3",
@@ -60,6 +59,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-datepicker": "^4.19.4",
-    "@types/react-dom": "^18.2.18"
+    "@types/react-dom": "^18.2.18",
+    "react-scripts": "5.0.0"
   }
 }
