Refactor solution to move the following POCOs to PetroliqAlgorithm solution: - ./Application/Enums - ./Model/User - ./Model.UserSettings
Update references to only be one way - API > Alg (foolishly introduced cyclic refs).

--- a/Petroliq/Petroliq_API.csproj
+++ b/Petroliq/Petroliq_API.csproj
@@ -23,9 +23,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\PetroliqAlgorithm\Shared\Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+
+  <!--<ItemGroup>
+    <ProjectReference Include="..\..\PetroliqAlgorithm\Shared\Shared.csproj" />
+  </ItemGroup>-->
 
 </Project>
